font size fix, plus spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,14 @@ h1 {
   height: max-content;
 }
 
+.row {
+    margin-top: 0%;
+}
+
+.row-p {
+    margin-top: 0%;
+}
+
 .footer {
    
 
@@ -41,7 +49,7 @@ container {
 }
 
 p {
-    font-size: 30px;
+    font-size: 18px;
     letter-spacing: 0.15px;
 
     line-height: 1.23;
